Partial_14Dec2021/force-app/main/default/objects/AP_Expenses__c/AP_Expenses__c.object-meta.xml
<CustomObject>
    <label>APPL Expense</label>
    <nameField>
        <displayFormat>Exp-{000000}</displayFormat>
        <label>AP Expenses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AP Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>