Partial_14Dec2021/force-app/main/default/objects/AP_Expenses__c/fields/Actual_District__c.field-meta.xml
<CustomField>
    <fullName>Actual_District__c</fullName>
    <label>Actual District</label>
    <type>TextArea</type>
</CustomField>