Partial_14Dec2021/force-app/main/default/objects/AP_Expenses__c/fields/Actual_Location__c.field-meta.xml
<CustomField>
    <fullName>Actual_Location__c</fullName>
    <label>Actual Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>