Partial_14Dec2021/force-app/main/default/objects/AP_Expenses__c/fields/Actual_State__c.field-meta.xml
<CustomField>
    <fullName>Actual_State__c</fullName>
    <label>Actual State</label>
    <type>TextArea</type>
</CustomField>