Partial_14Dec2021/force-app/main/default/objects/AP_Expenses__c/fields/Expens_Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Expens_Visit_Type__c</fullName>
    <label>Expense Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Headquarter-Metro</fullName>
            </value>
            <value>
                <fullName>Headquarter-State Capital</fullName>
            </value>
            <value>
                <fullName>Headquarter</fullName>
            </value>
            <value>
                <fullName>Ex-station</fullName>
            </value>
            <value>
                <fullName>Outstation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>