Partial_14Dec2021/force-app/main/default/objects/AP_Expenses__c/fields/Expense_Date__c.field-meta.xml
<CustomField>
    <fullName>Expense_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>