Partial_14Dec2021/force-app/main/default/objects/AP_Expenses__c/fields/Expense_Day__c.field-meta.xml
<CustomField>
    <fullName>Expense_Day__c</fullName>
    <formula>DAY( Expense_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>