Partial_14Dec2021/force-app/main/default/objects/AP_Expenses__c/fields/Expense_Details__c.field-meta.xml
<CustomField>
    <fullName>Expense_Details__c</fullName>
    <label>Expense Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>