Partial_14Dec2021/force-app/main/default/objects/AP_Expenses__c/fields/Fare_Amount_Local_Conveyance__c.field-meta.xml
<CustomField>
    <fullName>Fare_Amount_Local_Conveyance__c</fullName>
    <formula>KM__c  *  Rate_Per_KM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fare (Amount) / Local Conveyance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>