Partial_14Dec2021/force-app/main/default/objects/AP_Expenses__c/fields/Fare_and_Local__c.field-meta.xml
<CustomField>
    <fullName>Fare_and_Local__c</fullName>
    <formula>Fare_Local_Conveyance__c  +  Local_Conveyance_New__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fare and Local</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>