Partial_14Dec2021/force-app/main/default/objects/AP_Expenses__c/fields/Fare_Local_Conveyance__c.field-meta.xml
<CustomField>
    <fullName>Fare_Local_Conveyance__c</fullName>
    <label>Fare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>