Partial_14Dec2021/force-app/main/default/objects/AP_Expenses__c/fields/KM__c.field-meta.xml
<CustomField>
    <fullName>KM__c</fullName>
    <inlineHelpText>Give in Kilometers</inlineHelpText>
    <label>KM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>