Partial_14Dec2021/force-app/main/default/objects/AP_Expenses__c/fields/Lodge__c.field-meta.xml
<CustomField>
    <fullName>Lodge__c</fullName>
    <label>Lodge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>