Partial_14Dec2021/force-app/main/default/objects/AP_Expenses__c/fields/Miscellaneous__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous__c</fullName>
    <label>MISC/ Promotion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>