Partial_14Dec2021/force-app/main/default/objects/AP_Expenses__c/fields/Miscellaneous_Details__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Details__c</fullName>
    <label>Miscellaneous Details</label>
    <type>TextArea</type>
</CustomField>