Partial_14Dec2021/force-app/main/default/objects/AP_Expenses__c/fields/Not_Involving_Overnight_Stay_DA__c.field-meta.xml
<CustomField>
    <fullName>Not_Involving_Overnight_Stay_DA__c</fullName>
    <label>Not / Involving Overnight Stay DA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>