Partial_14Dec2021/force-app/main/default/objects/AP_Expenses__c/fields/Rate_Per_KM__c.field-meta.xml
<CustomField>
    <fullName>Rate_Per_KM__c</fullName>
    <label>Rate Per KM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>