Partial_14Dec2021/force-app/main/default/objects/AP_Expenses__c/fields/Remarks_for_Not_meeting_the_Visit_Target__c.field-meta.xml
<CustomField>
    <fullName>Remarks_for_Not_meeting_the_Visit_Target__c</fullName>
    <label>Remarks for Not meeting the Visit Target</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>