Partial_14Dec2021/force-app/main/default/objects/AP_Expenses__c/fields/Sundries_in_addition_to_Hotel_Bills__c.field-meta.xml
<CustomField>
    <fullName>Sundries_in_addition_to_Hotel_Bills__c</fullName>
    <label>Sundries in addition to Hotel Bills</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>