Partial_14Dec2021/force-app/main/default/objects/AP_Expenses__c/fields/Time_To__c.field-meta.xml
<CustomField>
    <fullName>Time_To__c</fullName>
    <label>End Time</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Start_Time__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>12:30 AM</fullName>
            </value>
            <value>
                <fullName>01:00 AM</fullName>
            </value>
            <value>
                <fullName>01:30 AM</fullName>
            </value>
            <value>
                <fullName>02:00 AM</fullName>
            </value>
            <value>
                <fullName>02:30 AM</fullName>
            </value>
            <value>
                <fullName>03:00 AM</fullName>
            </value>
            <value>
                <fullName>03:30 AM</fullName>
            </value>
            <value>
                <fullName>04:00 AM</fullName>
            </value>
            <value>
                <fullName>04:30 AM</fullName>
            </value>
            <value>
                <fullName>05:00 AM</fullName>
            </value>
            <value>
                <fullName>05:30 AM</fullName>
            </value>
            <value>
                <fullName>06:00 AM</fullName>
            </value>
            <value>
                <fullName>06:30 AM</fullName>
            </value>
            <value>
                <fullName>07:00 AM</fullName>
            </value>
            <value>
                <fullName>07:30 AM</fullName>
            </value>
            <value>
                <fullName>08:00 AM</fullName>
            </value>
            <value>
                <fullName>08:30 AM</fullName>
            </value>
            <value>
                <fullName>09:00 AM</fullName>
            </value>
            <value>
                <fullName>09:30 AM</fullName>
            </value>
            <value>
                <fullName>10:00 AM</fullName>
            </value>
            <value>
                <fullName>10:30 AM</fullName>
            </value>
            <value>
                <fullName>11:00 AM</fullName>
            </value>
            <value>
                <fullName>11:30 AM</fullName>
            </value>
            <value>
                <fullName>12:00 PM</fullName>
            </value>
            <value>
                <fullName>12:30 PM</fullName>
            </value>
            <value>
                <fullName>01:00 PM</fullName>
            </value>
            <value>
                <fullName>01:30 PM</fullName>
            </value>
            <value>
                <fullName>02:00 PM</fullName>
            </value>
            <value>
                <fullName>02:30 PM</fullName>
            </value>
            <value>
                <fullName>03:00 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>