Partial_14Dec2021/force-app/main/default/objects/AP_Expenses__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <formula>Local_Conveyance_New__c + Fare_Local_Conveyance__c +Local_Conveyance__c  +  Not_Involving_Overnight_Stay_DA__c  +  Sundries_in_addition_to_Hotel_Bills__c  +  Telephone_Fax_Internet__c  + Courier__c  +  Stationery_and_Photocopy__c  +  Miscellaneous__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>