Partial_14Dec2021/force-app/main/default/objects/AP_Expenses__c/fields/TourPlan__c.field-meta.xml
<CustomField>
    <fullName>TourPlan__c</fullName>
    <label>TourPlan</label>
    <referenceTo>AP_Tour_Plan__c</referenceTo>
    <relationshipLabel>AP Expenses</relationshipLabel>
    <relationshipName>AP_Expenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>